# fastedgy-template

./: .env.tpl  .gitignore  .mcp.json  .oxfmtignore  .prettierrc  CLAUDE.md  README.md  components.json  jsconfig.json  justfile  package.json  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/commands/: fix.md  fixjs.md  fixpy.md
.claude/hooks/: js-format.sh  js-gate.sh  lib.sh  py-format.sh  py-gate.sh
.claude/rules/: fastedgy.md  javascript.md  python.md  vue.md
.cursor/: mcp.json
.cursor/rules/: fastedgy.mdc  javascript.mdc  python.mdc  vue.mdc
app/: admin.html  index.html  vite.config.js
app/public/: manifest.json  offline.html
app/src/admin/: App.vue  main.js
app/src/admin/routes/: index.js
app/src/admin/stores/: admin.js
app/src/admin/views/: HomeView.vue
app/src/common/: sw.js
app/src/common/api/: attachments.js  states.js  users.js
app/src/common/routes/: index.js
app/src/main/: App.vue  main.js
server/: context.py  main.py
server/api/: hello.py  me.py
server/api/admin/: admin_info.py  user.py
server/cli/admin/: __init__.py  create.py
server/cli/db/: initdata.py
server/depends/: security.py
server/models/: __init__.py  attachment.py  country.py  queued_task.py  queued_task_log.py  queued_task_worker.py  state.py  user.py
server/schemas/: user.py
server/signals/: __init__.py  attachment.py
server/templates/emails/: email_footer.html  email_header.html
server/translations/: fr.po
web/: vite.config.js
web/src/admin/: App.vue  main.js
web/src/common/: sw.js
web/src/main/: App.vue  main.js
(+305 files in other folders)
